--- a/2024/Makefile
+++ b/2024/Makefile
@@ -5,11 +5,4 @@
 
 # Run a specific day module
 run:
-	@read -p "Enter the day number to run (e.g., 01): " DAY; \
-	day_file="day$${DAY}.go"; \
-	if [ ! -f "$$day_file" ]; then \
-		echo "Error: $$day_file does not exist."; \
-		exit 1; \
-	fi; \
-	echo "Running $$day_file..."; \
-	go run $$day_file
+	go run .
